[gd_scene load_steps=5 format=3 uid="uid://de6toqwr2q03i"]

[ext_resource type="Script" uid="uid://hts1rixbefgi" path="res://scripts/room.gd" id="1_434ub"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_um1ds"]
size = Vector2(289.5, 416.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xmfkn"]
size = Vector2(236, 354.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2dtu0"]
size = Vector2(197, 311)

[node name="Room1" type="Node2D"]
script = ExtResource("1_434ub")

[node name="BuscarPuertas" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 512

[node name="CollisionShape2D" type="CollisionShape2D" parent="BuscarPuertas"]
position = Vector2(117, 174.75)
shape = SubResource("RectangleShape2D_um1ds")
debug_color = Color(0.996883, 0, 0.17779, 0.42)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(117, 175.75)
shape = SubResource("RectangleShape2D_xmfkn")

[node name="EnemiesSpawn" type="Node2D" parent="."]

[node name="position2d" type="Marker2D" parent="EnemiesSpawn"]
position = Vector2(158, 145)

[node name="position2d2" type="Marker2D" parent="EnemiesSpawn"]
position = Vector2(48, 30)

[node name="position2d3" type="Marker2D" parent="EnemiesSpawn"]
position = Vector2(160, 36)

[node name="position2d4" type="Marker2D" parent="EnemiesSpawn"]
position = Vector2(46, 129)

[node name="Door" type="Node" parent="."]

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 256

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
position = Vector2(117.5, 173.5)
shape = SubResource("RectangleShape2D_2dtu0")

[connection signal="area_shape_entered" from="BuscarPuertas" to="." method="_on_buscar_puertas_area_shape_entered"]
[connection signal="body_entered" from="Area2D" to="." method="_on_body_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_area_2d_2_body_entered"]
